--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.10"
 django = "^5.1"
 python-telegram-bot = "^21.4"
 psycopg2-binary = "^2.9.9"
+pytelegrambotapi = "^4.22.1"
 
 
 [build-system]
