--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ django = "^5.1"
 python-telegram-bot = "^21.4"
 psycopg2-binary = "^2.9.9"
 pytelegrambotapi = "^4.22.1"
+dj-database-url = "^2.2.0"
 
 
 [build-system]
