--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,4 @@ sqlparse==0.5.1 ; python_version >= "3.10" and python_version < "4.0"
 typing-extensions==4.12.2 ; python_version >= "3.10" and python_version < "3.11"
 tzdata==2024.1 ; python_version >= "3.10" and python_version < "4.0" and sys_platform == "win32"
 urllib3==2.2.2 ; python_version >= "3.10" and python_version < "4.0"
+dj-database-url==1.2.0
